# hfoundry

./: README.md  pyproject.toml
src/hfoundry/: cli.py
